refactor: created method to load all users and computed number of users value in the store, together with UI enhancement

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,9 @@
 :root {
   --grey-100: #f2f2f2;
   --grey-250: #e5e5e5;
+  --grey-450: #7E7E7E;
+
+  --red-500: #c10230;
+  --green-500: #009900;
+  --blue-500: #2962FF;
 }
