refactor: added method and property into store and UI revamp

--- a/src/app/features/users/components/containers/users-listings/users-listings.html
+++ b/src/app/features/users/components/containers/users-listings/users-listings.html
@@ -10,9 +10,9 @@
   <div class="progress">
     <span [class]="currentState">
       {{
-        currentState === 'loading' ? progressData.loading :
-        currentState === 'error'   ? progressData.error   :
-        currentState === 'loaded'  ? progressData.loaded  :
+        currentState === 'loading' ? progressMessage['loading'] :
+        currentState === 'error' ? progressMessage['error'] :
+        currentState === 'loaded' ? progressMessage['loaded'] :
         ''
       }}
     </span>
