--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,9 @@
 :root {
   --grey-100: #f2f2f2;
-  --grey-250: #e5e5e5;
+  --grey-275: #EEEEEE;
+  --grey-250: #E5E5E5;
   --grey-450: #7E7E7E;
+  --grey-800: #666666;
 
   --red-500: #c10230;
   --green-500: #009900;
