--- a/src/app/features/users/components/ui/users-data-table/users-data-table.html
+++ b/src/app/features/users/components/ui/users-data-table/users-data-table.html
@@ -7,20 +7,18 @@
             <tr>
                 <th>User ID</th>
                 <th>Name</th>
-                <th>Contact</th>
-                <th>Occupation</th>
-                <th>Country</th>
+                <th>Click 'Details' to view more information about the user</th>
             </tr>
         </thead>
 
         <tbody>
             @for (data of usersData; track data.id) {
             <tr>
-                <td >{{ data.id }}</td>
+                <td>{{ data.id }}</td>
                 <td>{{ data.name }}</td>
-                <td>{{ data.contact }}</td>
-                <td>{{ data.occupation ?? '—' }}</td>
-                <td>{{ data.country }}</td>
+                <td>
+                    <a [routerLink]="['/users', data.id]">Details</a>
+                </td>
             </tr>
             }
         </tbody>
