refactor: code refactored and simplified logic. enhanced store structure

--- a/src/app/features/users/components/containers/users-listings/users-listings.html
+++ b/src/app/features/users/components/containers/users-listings/users-listings.html
@@ -5,17 +5,8 @@
     </span>
   </div>
 
-  @let currentState = usersStore.progressState();
-
   <div class="progress">
-    <span [class]="currentState">
-      {{
-        currentState === 'loading' ? progressMessage['loading'] :
-        currentState === 'error' ? progressMessage['error'] :
-        currentState === 'loaded' ? progressMessage['loaded'] :
-        ''
-      }}
-    </span>
+    <span [class]="usersStore.progressState()">{{ usersStore.progressMessage() }}</span>
   </div>
 
   <app-users-data-table [usersData]="usersStore.users()" />
