--- a/src/app/features/users/components/ui/user-summary-panel/user-summary-panel.html
+++ b/src/app/features/users/components/ui/user-summary-panel/user-summary-panel.html
@@ -1,5 +1,5 @@
 @if (!selectedUser) {
-<span>User not found</span>
+<span>{{ emptyData }}</span>
 } @else {
 <div class="summary-panel">
   <div class="row">
