feat: added new methods to handle login, logout and pagination

--- a/src/app/features/users/components/containers/user-details/user-details.html
+++ b/src/app/features/users/components/containers/user-details/user-details.html
@@ -1,8 +1,6 @@
 <div class="detail">
     <div class="title-link">
-        <div>
-            <div>Individual User Detail</div>
-        </div>
+        <span>Individual User Detail</span>
     </div>
 
     <div class="progress">
