--- a/src/app/features/users/components/containers/users-listings/users-listings.html
+++ b/src/app/features/users/components/containers/users-listings/users-listings.html
@@ -9,5 +9,9 @@
     <span [class]="usersStore.progressState()">{{ usersStore.progressMessage() }}</span>
   </div>
 
-  <app-users-data-table [usersData]="usersStore.users()" />
+  <app-users-data-table [usersData]="usersStore.displayedUsers()" />
+
+  <button class="cta-btn" (click)="usersStore.userLogout()">
+    Logout
+  </button>
 </div>
