--- a/src/app/features/users/components/containers/users-listings/users-listings.scss
+++ b/src/app/features/users/components/containers/users-listings/users-listings.scss
@@ -21,4 +21,11 @@
       color: var(--red-500);
     }
   }
+
+  .cta-btn {
+    width: 5rem;
+    padding: 0.5rem;
+    border-radius: 10px;
+    margin-block-start: 1rem;
+  }
 }
