--- a/src/app/features/users/components/ui/users-data-table/users-data-table.scss
+++ b/src/app/features/users/components/ui/users-data-table/users-data-table.scss
@@ -3,10 +3,15 @@
 }
 
 .table-wrapper {
-  max-height: 14rem;
+  height: 15rem;
   overflow-y: auto;
   overflow-x: auto;
   border: 1px solid var(--grey-250);
+
+  .gap {
+    margin-block: 1rem;
+    margin-inline-start: 1rem;
+  }
 
   .table {
     width: 100%;
