--- a/src/app/shared/components/ui/layout/layout.scss
+++ b/src/app/shared/components/ui/layout/layout.scss
@@ -11,21 +11,16 @@
     .title {
       font-weight: 700;
     }
-
-    .nav a {
-      padding: 6px 10px;
-      border-radius: 8px;
-    }
-
-    .nav a.active {
-      background: var(--grey-100);
-    }
   }
 
-  .main-content {
-    padding: 16px;
-    max-width: 960px;
-    margin: 0 auto;
-    width: 100%;
+  .body-container {
+    padding: 16px;      
+
+    .cta-btn {
+      width: 5rem;
+      padding: 0.5rem;
+      border-radius: 10px;
+      margin-block-start: 1rem;
+    }
   }
 }
