feat: added new method in the store to get user data based on selected user id

--- a/src/app/features/users/components/containers/user-details/user-details.html
+++ b/src/app/features/users/components/containers/user-details/user-details.html
@@ -7,7 +7,7 @@
         <span [class]="usersStore.progressState()">{{ usersStore.progressMessage() }}</span>
     </div>
 
-    <app-user-summary-panel [selectedUser]="usersStore.selectedUserBasedOnId()" />
+    <app-user-summary-panel [selectedUser]="usersStore.userDataBySelectedId()" />
 
     <div>
         <a class="back" routerLink="/users">View User Listings</a>
